git and google sessions, but errrors when deleted user manually from database

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://poofy:fatandpoofy@cluster0.zvvqtbr.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=b3f7d8ba104e112effdf
+GITHUB_SECRET=e61d91c584cd68f063bfda90b64d4a642a72ae77
+
+GOOGLE_CLIENT_ID=460013409279-ru1plaei504pp6616om0g9ohi3l9lmtd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
