--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && prisma generate",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "^5.0.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -44,7 +44,7 @@
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.25",
-    "prisma": "^4.16.2",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
